--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^112.0.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "uuid": "^9.0.0",
