--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.6",
+    "@types/nodemailer": "^6.4.7",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.21",
